--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
     "dev": "vite --mode dev",
     "build": "vite build",
     "preview": "vite preview --port 4173",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
     "axios": "^1.6.8",
     "echarts": "^5.5.0",
-    "normalize.css": "^8.0.1",
     "qs": "^6.12.1",
     "vue": "^2.7.7",
     "vue-router": "^3.5.4",
@@ -21,11 +21,16 @@
     "@rushstack/eslint-patch": "^1.1.0",
     "@vitejs/plugin-legacy": "^2.0.0",
     "@vitejs/plugin-vue2": "^1.1.2",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.5.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.0.0",
     "less": "^4.2.0",
+    "postcss": "^8.4.39",
     "postcss-pxtorem": "^6.1.0",
-    "terser": "^5.14.2",
+    "prettier": "^3.3.2",
     "vite": "^3.0.2"
   }
 }
