--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "amfe-flexible": "^2.2.1",
     "axios": "^1.6.8",
+    "copy-to-clipboard": "^3.3.3",
+    "dayjs": "^1.11.11",
     "echarts": "^5.5.0",
+    "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "qs": "^6.12.1",
     "vue": "^2.7.7",
     "vue-router": "^3.5.4",
