--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "vite --mode dev",
     "build": "vite build",
     "preview": "vite preview --port 4173",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix",
     "prettier": "prettier --write ."
   },
   "dependencies": {
